--- a/Wordle/index.html
+++ b/Wordle/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Wordle 게임</title>
-        <link rel="stylesheet" href="./font.css">
+        <link rel="stylesheet" href="../font.css">
         <link rel="stylesheet" href="./index.css">
 
         <body>
