--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link href = "./font.css" rel = "stylesheet">
     <title>My Portfolio</title>
 </head>
 <body>
     <h1>김광일의 포트폴리오</h1>
+    <label>Wordle 게임</label>
+    <a href = "./Wordle/index.html">이동하기</a>
 </body>
 </html>
