231124 문제 설명 추가

--- a/Wordle/index.html
+++ b/Wordle/index.html
@@ -9,6 +9,8 @@
 
         <body>
             <h2>Wordle Game</h2>
+            <p>5글자 단어를 맞추는 게임입니다. 글자 하나씩 입력한 뒤, '제출' 버튼을 눌러서 비교해보세요!</p>
+            <p>정답 기준<br>초록색 : 위치와 글자까지 정답 <br>노란색 : 글자만 정답 (위치 Wrong)<br>회색 : 없는 글자</p>
             <p>도전 횟수 :
                 <label id="count">0</label>
             </p>
