231124 input maxlength 오류 해결

--- a/Wordle/index.html
+++ b/Wordle/index.html
@@ -46,11 +46,11 @@
                                     .remove('input');
                             }
                             var template = `<div>
-                        <input class = "input">
-                        <input class = "input">
-                        <input class = "input">
-                        <input class = "input">
-                        <input class = "input">                                                 
+                        <input class = "input" maxlength="1">
+                        <input class = "input" maxlength="1">
+                        <input class = "input" maxlength="1">
+                        <input class = "input" maxlength="1">
+                        <input class = "input" maxlength="1">                                               
                         </div>
                         `;
 
